fix related widget wrapper overflow

--- a/djangocms_admin_style/sass/components/_forms.scss
+++ b/djangocms_admin_style/sass/components/_forms.scss
@@ -737,6 +737,7 @@ form select[multiple] {
 
 //related-widget
 .related-widget-wrapper {
+    overflow: visible;
     width: 100%;
 }
 .related-widget-wrapper-link {
